Feat : changes in getAllCuisinesAndMeals